docs(docs): add foundations shadow documentation

--- a/packages/docs/design-docs/foundations/responsiveness.mdx
+++ b/packages/docs/design-docs/foundations/responsiveness.mdx
@@ -22,7 +22,7 @@ The number of columns should reduce in conjuction with available screen real est
 
 _(eg: A 4 column Desktop layout, should reduce to a 2 column Tablet layout, and a 1 column Mobile layout)_
 
-<FigmaSample url="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/file/R1ypJlrNvHyVUXuaCloVSv/Responsive-example?type=design&node-id=0%253A1&mode=design&t=MYi7XDfggBhGxrUU-1" aspect="landscape">
+<FigmaSample url="https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/file/R1ypJlrNvHyVUXuaCloVSv/Responsive-example?type=design&node-id=0%253A1&mode=design&t=MYi7XDfggBhGxrUU-1" aspect="square">
 
 [View Example](https://www.figma.com/embed?embed_host=share&url=https://www.figma.com/file/R1ypJlrNvHyVUXuaCloVSv/Responsive-example?type=design&node-id=0%253A1&mode=design&t=MYi7XDfggBhGxrUU-1)
 
