docs(docs): add the ux writing style guide base

--- a/packages/docs/design-docs/foundations/shadows.mdx
+++ b/packages/docs/design-docs/foundations/shadows.mdx
@@ -44,12 +44,12 @@ Floating shadows are higher in elevation than Raised shadows. They are reserved 
 | Opacity   | 20%    |
 </div>
 
+</div>
+
 ## Examples
 
 <FigmaSample url="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FXcEPL2CKQ0VgYgdDfUEmeY%2FShadows%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DsBwJ1tYAzRcNHxkL-1" aspect="landscape">
-
 [View Example](https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FXcEPL2CKQ0VgYgdDfUEmeY%2FShadows%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DsBwJ1tYAzRcNHxkL-1)
-
 </FigmaSample>
 
 ## Notes
@@ -57,9 +57,7 @@ Floating shadows are higher in elevation than Raised shadows. They are reserved 
 In order to prevent clutter and visual overload, shadows can only be applied to elements that are places atop of the page background such as cards and floating elements like modals. If such shadowed elements should contain cards within their contents then such will not have shadows. 
 
 <FigmaSample url="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FHsnGVCZfHfqfKNZ2VZIMzg%2FShadows---Do's-and-dont's%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DMwI5X79o5aaWZ8wk-1" aspect="landscape">
-
 [View Example](https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FHsnGVCZfHfqfKNZ2VZIMzg%2FShadows---Do's-and-dont's%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DMwI5X79o5aaWZ8wk-1)
-
 </FigmaSample>
 
 ## Resources
