docs(docs): fix grammar and mechanics examples

--- a/packages/docs/design-docs/ux-writing/grammar-and-mechanics.mdx
+++ b/packages/docs/design-docs/ux-writing/grammar-and-mechanics.mdx
@@ -284,7 +284,9 @@ Do not use periods, or any ending punctuation of any kind, on titles, labels, he
 
 Let’s look at an example:
 
-![enter image description here](blob:https://bigcommercecloud.atlassian.net/3eb088f2-014d-4a26-b468-378a5681c6de#media-blob-url=true&id=f78c6645-ff19-48a5-bd3b-d09641ca0270&collection=contentId-64716898&contextId=64716898&height=228&width=624&alt=)
+<FigmaSample url="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F5KZNYdgysHmASmDvBZPP3m%2FGrammar-and-mechanics---Periods%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DUIeaPrF4qY34KuiX-1" aspect="landscape">
+(View Example)[https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F5KZNYdgysHmASmDvBZPP3m%2FGrammar-and-mechanics---Periods%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DUIeaPrF4qY34KuiX-1]
+</FigmaSample> 
 
 In the card above, the text above the divider qualifies as a header — it’s giving a name to the tile that it appears on — and doesn’t need a period.
 
@@ -304,7 +306,9 @@ Use quotation marks when referring, in the UI, to another item within the UI. Th
 
 Let’s look at an example:
 
-![enter image description here](blob:https://bigcommercecloud.atlassian.net/3eb088f2-014d-4a26-b468-378a5681c6de#media-blob-url=true&id=f78c6645-ff19-48a5-bd3b-d09641ca0270&collection=contentId-64716898&contextId=64716898&height=228&width=624&alt=)
+<FigmaSample url="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F5KZNYdgysHmASmDvBZPP3m%2FGrammar-and-mechanics---Periods%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DUIeaPrF4qY34KuiX-1" aspect="landscape">
+(View Example)[https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2F5KZNYdgysHmASmDvBZPP3m%2FGrammar-and-mechanics---Periods%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DUIeaPrF4qY34KuiX-1]
+</FigmaSample> 
 
 Do
 
