docs(docs): edit UX writing guidelines info

--- a/packages/docs/design-docs/ux-writing/glossary.mdx
+++ b/packages/docs/design-docs/ux-writing/glossary.mdx
@@ -122,7 +122,7 @@ Do not use “next.”
 
 **control panel**
 
-Control panel is not a proper noun. No need to capitalize. Of course, always capitalize the first letter of the first word if it appears at the start of a sentence.
+Control panel is not a proper noun. No need to capitalize. Of course, always capitalize the first letter of the first word if it appears at the start of a sentence. Keep in mind, there are very few instances when you’ll need to refer to the control panel by name. Most of the time you’ll just say “store.”
 
 **create**
 
