docs(docs): correct info on grammar, status messages and interactions

--- a/packages/docs/design-docs/ux-writing/status-messages.mdx
+++ b/packages/docs/design-docs/ux-writing/status-messages.mdx
@@ -4,11 +4,11 @@ import { DosAndDonts, Dos, Donts, IconDo, IconDont } from "@components/big-desig
 
 ## Keep it simple
 
-Messages should be short and to the point. Focus on what happened and what the user needs to do to move forward. When applicable, include a link to the place where the user can fix the problem.
+Messages should be short and to the point. Focus on what happened and what the user needs to do to move forward. When applicable, include a link to the place where the user can act upon what's being announced.
 
 ## Avoid vague language
 
-Don’t start error messages with “It seems like…” or “It looks like….” It sounds like we don’t know what went wrong. There’s no room for ambiguity — especially when we’re trying to confirm a potentially destructive action.
+Don’t start status messages with “It seems like…” or “It looks like….” It sounds like we don’t know what went wrong. There’s no room for ambiguity — especially when we’re trying to confirm a potentially destructive action.
 
 <Donts>
 <div class="hidden">
@@ -99,34 +99,6 @@ When a user clicks a button, whether it’s to confirm an action or cancel one, 
 ![Don't use vague CTAs](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-status-messages_concise.png)
 </div>
 </Dos>
-
-
-## Empty states
-
-Copy for empty states should tell the user why the field is empty and tell them how to start adding items.
-
-<Dos>
-<div class="hidden">
-**Do**
-</div>
-<div className="flex items-center justify-center">
-![No products found empty state](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-empty_states_1.png)
-</div>
-</Dos>
-
-## Error messages
-
-There are two basic types of error messages: banner and in-line.
-
-### In-line
-<div className="flex items-center justify-center">
-![In-line error message](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-status-messages-inline-messages.png)
-</div>
-
-### Banner
-<div className="flex items-center justify-center">
-![Banner error message](https://storage.googleapis.com/bigcommerce-production-dev-center/images/big-design/big-design.ux-writing-guide.interactions-status-messages_concise.png)
-</div>
 
 ## Include applicable links
 
